--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="manifest" href="/manifest.json">
         <script src="script.js"></script>
+        <!-- Подключаем библиотеку AOS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+
     </head>
     
     <body>
         <header class="hero">
             <img src="images/logo.png" alt="Логотип" class="logo">
-            <h1>Город Конаев</h1>
-            <p>Город будущего с историей в сердце</p>
+            <h1>data-aos="fade-up"Город Конаев</h1>
+            <p>data-aos="fade-up"Город будущего с историей в сердце</p>
         </header>
 
     <nav class="navbar">
-        <a href="#about">О городе</a>
-        <a href="qonaev.html">Достопримечательности</a>
-        <a href="culture.html">Культура</a>
-        <a href="#gallery">Фотогалерея</a>
-        <a href="#contact">Контакты</a>
-        <a href="Hotels.html">Отели</a>
+        <a href="#about">data-aos="fade-up"О городе</a>
+        <a href="qonaev.html">data-aos="fade-up"Достопримечательности</a>
+        <a href="culture.html">data-aos="fade-up"Культура</a>
+        <a href="#gallery">data-aos="fade-up"Фотогалерея</a>
+        <a href="#contact">data-aos="fade-up"Контакты</a>
+        <a href="Hotels.html">data-aos="fade-up"Отели</a>
     </nav>
 
     <main>
@@ -107,5 +110,12 @@
     </footer>
 
     <script src="script.js"></script>
+
+        <!-- Подключаем скрипт для работы AOS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+
 </body>
 </html>
